# Libft

./: .clang-format  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  <  AGENTS.md  CONTRIBUTING.md  Dependency_graph.txt  FullLibft.hpp  Makefile  README.md  SECURITY.md  TEST_RUN.md  TODO.md  TODO_AUDIT.md  ToDoList  compile_commands.json  compiler_flags.mk  cpp_hpp_checklist_by_module.txt  full_libft_manifest.txt  module.txt  sqlite_support.hpp  test_for_errno.txt
.github/: pull_request_template.md
API/: Makefile  api.hpp  api_connection_pool.cpp  api_connection_pool_handle.cpp  api_content_length.cpp  api_http_common.cpp  api_http_common.hpp  api_http_internal.hpp  api_http_plain.cpp  api_http_tls.cpp  api_internal.hpp  api_promise.cpp  api_promise.hpp  api_request.cpp  api_request_async.cpp  api_request_error.cpp  api_request_metrics.cpp  api_request_metrics.hpp  api_request_signing.cpp  api_request_signing.hpp  api_request_tls.cpp  api_retry.cpp  api_retry_policy.cpp  api_streaming_handler.cpp  api_tls_client.cpp  api_tls_client.hpp  api_transport_hooks.cpp  api_wrapper.cpp  api_wrapper.hpp  compile_commands.json  promise.hpp  tls_client.hpp
Advanced/: Makefile  advanced.hpp  advanced_atoi.cpp  advanced_calloc.cpp  advanced_itoa.cpp  advanced_itoa_base.cpp  advanced_locale_casefold.cpp  advanced_memdup.cpp  advanced_span_to_string.cpp  advanced_split.cpp  advanced_strdup.cpp  advanced_strjoin.cpp  advanced_strjoin_multiple.cpp  advanced_strndup.cpp  advanced_strtrim.cpp  advanced_substr.cpp  advanced_to_string.cpp  advanced_wide.cpp
Basic/: Makefile  basic.hpp  basic_atoi.cpp  basic_atol.cpp  basic_bzero.cpp  basic_hash_string31.cpp  basic_isalnum.cpp  basic_isalpha.cpp  basic_isdigit.cpp  basic_islower.cpp  basic_isprint.cpp  basic_isspace.cpp  basic_isupper.cpp  basic_locale_compare.cpp  basic_memchr.cpp  basic_memcmp.cpp  basic_memcpy.cpp  basic_memcpy_s.cpp  basic_memmove.cpp  basic_memmove_s.cpp  basic_memset.cpp  basic_span_dup.cpp  basic_strcat_s.cpp  basic_strchr.cpp  basic_strcmp.cpp  basic_strcpy_s.cpp  basic_striteri.cpp  basic_strlcat.cpp  basic_strlcpy.cpp  basic_strmapi.cpp  basic_strncat_s.cpp  basic_strncmp.cpp  basic_strncpy.cpp  basic_strncpy_s.cpp  basic_strnlen.cpp  (+16 more)
Docs/quick_start_templates/bazel/: BUILD.bazel  README.md  WORKSPACE
Docs/quick_start_templates/cmake/: CMakeLists.txt  README.md
Docs/quick_start_templates/meson/: README.md  meson.build
Docs/quick_start_templates/meson/src/: main.cpp
(+5175 files in other folders)
