cc_library(
    name = "libft_core",
    srcs = glob(
        ["external/libft/**/*.cpp"],
        exclude = [
            "external/libft/Test/**",
            "external/libft/tools/**",
        ],
    ),
    hdrs = glob(["external/libft/**/*.hpp", "external/libft/**/*.h"]),
    includes = ["external/libft"],
    copts = ["-std=c++17"],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "quick_start",
    srcs = ["src/main.cpp"],
    deps = [":libft_core"],
)
